fixed container width so no overflow

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ div#scoreboard {
   cursor: pointer;
   max-width: 1024px;
 
-  width: 100%;
+  width: 90%;
   
   margin-inline: auto;
 }
@@ -68,7 +68,15 @@ div#scoreboard {
   border-radius: 15px;
   width: 10rem;
   text-align: center;
+};
+
+.pokemon-card:active,
+.restart-button:active {
+  box-shadow: 0 5px 25px rgb(190, 191, 70);
+  transform: scale(105%);
 }
+
+;
 
 @media (min-width: 768px) {
   #card-container {
@@ -91,7 +99,7 @@ div#scoreboard {
   .restart-button:hover {
     box-shadow: 0 5px 25px rgb(190, 191, 70);
     transform: scale(105%);
-  }
+  };
   
   button, .pokemon-card {
     cursor: pointer;
